# AMT2ABC

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh-CN.md  pyproject.toml
abc/general/Create_Edit_CAPA_Events/: Create Edit CAPA Events.json  abc.json
abc/general/Query_CAPA_list_details/: Query CAPA list details.json
abc/general/create-edit-capa-events/: README.md  abc.json
abc/general/create-edit-capa-events/examples/: inputs.json
abc/general/form-create-material-request/: README.md  abc.json  form-create-material-request.json
abc/general/form-kanban-card/: README.md  abc.json
abc/general/form-simple-input-submit/: README.md  abc.json
abc/general/form-simple-input-submit/examples/: inputs.json  outputs.json
abc/general/query-capa-list-details/: README.md  abc.json
abc/general/query-capa-list-details/examples/: inputs.json  outputs.json
docs/: abc-spec.md  contribute-abc-quickstart.md  desensitization-guide.md  getting-started.md  graph_report.md  index.html  pr-review-sop.md  proposal-abc-pipeline.md  secp_format.md
src/amt2abc/: cli.py
src/amt2abc/compiler/: __init__.py  graph.py  matcher.py  pipeline.py
src/amt2abc/models/: __init__.py  abc.py  amt.py  gs.py  secp.py
src/amt2abc/parser/: __init__.py  abc_parser.py  amt_parser.py  gs_parser.py
src/amt2abc/registry/: __init__.py  index.py
tests/: test_cli.py  test_compiler.py  test_models.py  test_parser.py
