[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amt2abc"
version = "0.1.0"
description = "Atomic Mechanism Triplets to Atomic Business Capabilities - An Industrial Software Compiler"
license = "Apache-2.0"
authors = ["AMT2ABC Contributors"]
readme = "README.md"
repository = "https://github.com/zylliondata/AMT2ABC"
documentation = "https://github.com/zylliondata/AMT2ABC"
homepage = "https://github.com/zylliondata/AMT2ABC"
keywords = ["industrial-software", "compiler", "amt", "abc", "manufacturing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
pyyaml = "^6.0"
pydantic = "^2.0"
networkx = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1"
mypy = "^1.0"
pre-commit = "^3.0"

[tool.poetry.scripts]
amt2abc = "amt2abc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
